# differentiable_camera

./: .gitmodules  CMakeLists.txt  main.cpp
camera/: CMakeLists.txt  camera.hpp  detail.hpp
tests/: CMakeLists.txt  main.cpp
